--- a/frontend/src/ChatWindow.module.css
+++ b/frontend/src/ChatWindow.module.css
@@ -1,7 +1,8 @@
 #root {
     margin: 0;
     padding-bottom: 3rem;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Helvetica, Arial, sans-serif;
 }
 
 .form {
@@ -36,14 +37,23 @@
     color: #fff;
 }
 
+.message-container {
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5dc;
+}
 .messages {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    border: solid gray 1px;
+    margin: 5px 20px 5px 5px;
+    padding: 10px;
+    padding-bottom: 0px;
+    width: fit-content;
+    border-radius: 20px 20px 20px 0px;
+    background-color: white;
 }
-.messages > li {
-    padding: 0.5rem 1rem;
-}
-.messages > li:nth-child(odd) {
-    background: #efefef;
+.self-message {
+    align-self: flex-end;
+    margin: 5px 5px 5px 20px;
+    border-radius: 20px 20px 0px 20px;
 }
