--- a/frontend/src/ChatWindow.module.css
+++ b/frontend/src/ChatWindow.module.css
@@ -16,6 +16,8 @@
     height: 3rem;
     box-sizing: border-box;
     backdrop-filter: blur(10px);
+    max-width: 600px;
+    margin: auto;
 }
 .input {
     border: none;
@@ -28,7 +30,7 @@
     outline: none;
 }
 .form > button {
-    background: #333;
+    background: linear-gradient(180deg, #3081b8, #2980b9);
     border: none;
     padding: 0 1rem;
     margin: 0.25rem;
@@ -38,10 +40,10 @@
 }
 
 .message-container {
-    padding-bottom: 50px;
+    padding-bottom: 60px;
     display: flex;
     flex-direction: column;
-    background-color: #f5f5dc;
+    padding-top: 60px;
 }
 .messages {
     border: solid gray 1px;
@@ -56,4 +58,36 @@
     align-self: flex-end;
     margin: 5px 5px 5px 20px;
     border-radius: 20px 20px 0px 20px;
+}
+.chat-window {
+    max-width: 600px;
+    margin: auto;
+    overflow: scroll;
+    height: 100vh;
+}
+
+.group-name {
+    position: fixed;
+    width: 600px;
+    height: 50px;
+    background: linear-gradient(180deg, #3081b8, #2980b9);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    font-size: larger;
+    font-weight: 700;
+    color: white;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.chat-window::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.chat-window {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
