--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,11 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #f5f5dc;
+    background-color: transparent;
+    /* background: linear-gradient(#d3ceda, #e2dbd1); */
+    /* background: #e5e7eb; */
+    background: #e8f7ff;
+    height: 100vh;
 }
 
 code {
